--- a/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
+++ b/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="YYc-9h-Ac1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.82568794489999997" green="0.95160108799999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.95649704579598394" green="0.96596731357614218" blue="0.96596731357614218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryListCell" rowHeight="75" id="xmC-TH-Vz0" customClass="EntryTableViewCell" customModule="JournalWithCoreData" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="75"/>
@@ -63,7 +63,6 @@
                                         <constraint firstItem="6ko-Ip-vEq" firstAttribute="leading" secondItem="ZlD-uz-w39" secondAttribute="trailing" constant="8" id="xcC-nJ-XnE"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="bodyTextLabel" destination="dev-4S-jz6" id="Hen-cw-73L"/>
                                     <outlet property="timestampLabel" destination="6ko-Ip-vEq" id="Aqg-KB-zvB"/>
@@ -121,7 +120,7 @@
                                 </segments>
                             </segmentedControl>
                         </subviews>
-                        <color key="backgroundColor" red="0.82568794489999997" green="0.95160108799999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.94980175584624771" green="0.95920573362690364" blue="0.95920573362690364" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="AEy-v2-xB2" firstAttribute="bottom" secondItem="nhL-SA-Stk" secondAttribute="bottom" constant="256" id="6VS-g1-VLl"/>
                             <constraint firstItem="ID6-oE-1TA" firstAttribute="leading" secondItem="AEy-v2-xB2" secondAttribute="leading" constant="16" id="8bd-iQ-bRU"/>
@@ -160,6 +159,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="B8Z-gE-UXD">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.247" green="0.43099999999999999" blue="0.45600000000000002" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="gO6-NZ-dSr" kind="relationship" relationship="rootViewController" id="wO7-Jo-Mfe"/>
