--- a/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
+++ b/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
@@ -29,13 +29,13 @@
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZlD-uz-w39">
                                             <rect key="frame" x="16" y="11" width="252" height="21"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="19"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dev-4S-jz6">
                                             <rect key="frame" x="16" y="40" width="343" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -45,7 +45,7 @@
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="83" id="33W-hL-584"/>
                                                 <constraint firstAttribute="height" constant="21" id="GCB-Qp-lBD"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="15"/>
                                             <color key="textColor" red="0.4860512018" green="0.4898700714" blue="0.51057106259999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -78,6 +78,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Journal" id="CGZ-rK-Nyd">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="tkV-ia-YmS">
+                            <color key="tintColor" red="0.14091751350000001" green="0.22532645060000001" blue="0.2168728872" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <segue destination="xnQ-4b-0sD" kind="show" identifier="ShowAddEntry" id="bg5-kG-zNe"/>
                             </connections>
@@ -102,13 +103,13 @@
                                     <constraint firstAttribute="height" constant="30" id="7oJ-RK-YdN"/>
                                 </constraints>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nhL-SA-Stk">
                                 <rect key="frame" x="16" y="203" width="343" height="208"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ID6-oE-1TA">
@@ -118,6 +119,7 @@
                                     <segment title="😐"/>
                                     <segment title="🙂"/>
                                 </segments>
+                                <color key="tintColor" red="0.52525887978336638" green="0.83743780850000005" blue="0.79824682158135085" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" red="0.94980175584624771" green="0.95920573362690364" blue="0.95920573362690364" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -137,6 +139,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="fCA-tg-Ypi">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="SLj-Ih-TLp">
+                            <color key="tintColor" red="0.14091751350000001" green="0.22532645060000001" blue="0.2168728872" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="save:" destination="xnQ-4b-0sD" id="AHG-gd-E07"/>
                             </connections>
@@ -159,7 +162,13 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="B8Z-gE-UXD">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.247" green="0.43099999999999999" blue="0.45600000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.7137415667" green="0.83743780850000005" blue="0.82399482020000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.14091751350000001" green="0.22532645060000001" blue="0.2168728872" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="0.14091751347827552" green="0.22532645063197976" blue="0.21687288719493991" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="gO6-NZ-dSr" kind="relationship" relationship="rootViewController" id="wO7-Jo-Mfe"/>
