Fixed fetchEntriesFromServer. Added pullToRefresh.

--- a/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
+++ b/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
@@ -84,6 +84,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="L0Y-QF-kAB">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="gO6-NZ-dSr" eventType="valueChanged" id="Q7b-xN-dSh"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c4g-uj-aU2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
