--- a/Journal - Core Data/Journal - Core Data/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal - Core Data/Journal - Core Data/Storyboards/Base.lproj/Main.storyboard
@@ -91,28 +91,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title here: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zaX-tm-sZs">
-                                <rect key="frame" x="16" y="132" width="343" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xgu-Wt-hUa">
-                                <rect key="frame" x="16" y="178" width="343" height="473"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="VNQ-nt-aih">
+                                <rect key="frame" x="16" y="132" width="343" height="519"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Db6-qJ-JcG">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="29"/>
+                                        <segments>
+                                            <segment title="😊"/>
+                                            <segment title="😐"/>
+                                            <segment title="😢"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title here: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zaX-tm-sZs">
+                                        <rect key="frame" x="0.0" y="44" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xgu-Wt-hUa">
+                                        <rect key="frame" x="0.0" y="90" width="343" height="429"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vy9-hb-dCl" firstAttribute="bottom" secondItem="xgu-Wt-hUa" secondAttribute="bottom" constant="16" id="JO7-qj-yEv"/>
-                            <constraint firstItem="vy9-hb-dCl" firstAttribute="trailing" secondItem="xgu-Wt-hUa" secondAttribute="trailing" constant="16" id="R3m-Iz-0yt"/>
-                            <constraint firstItem="zaX-tm-sZs" firstAttribute="leading" secondItem="vy9-hb-dCl" secondAttribute="leading" constant="16" id="V2H-UQ-00Y"/>
-                            <constraint firstItem="xgu-Wt-hUa" firstAttribute="top" secondItem="zaX-tm-sZs" secondAttribute="bottom" constant="16" id="dd7-fY-LOs"/>
-                            <constraint firstItem="vy9-hb-dCl" firstAttribute="trailing" secondItem="zaX-tm-sZs" secondAttribute="trailing" constant="16" id="drx-lj-Tr3"/>
-                            <constraint firstItem="zaX-tm-sZs" firstAttribute="top" secondItem="vy9-hb-dCl" secondAttribute="top" constant="16" id="kPZ-G3-oq5"/>
-                            <constraint firstItem="xgu-Wt-hUa" firstAttribute="leading" secondItem="vy9-hb-dCl" secondAttribute="leading" constant="16" id="tv9-ll-VHR"/>
+                            <constraint firstItem="vy9-hb-dCl" firstAttribute="trailing" secondItem="VNQ-nt-aih" secondAttribute="trailing" constant="16" id="7Cd-mm-wxP"/>
+                            <constraint firstItem="VNQ-nt-aih" firstAttribute="top" secondItem="vy9-hb-dCl" secondAttribute="top" constant="16" id="JXm-HG-6zC"/>
+                            <constraint firstItem="vy9-hb-dCl" firstAttribute="bottom" secondItem="VNQ-nt-aih" secondAttribute="bottom" constant="16" id="gpB-rF-R8A"/>
+                            <constraint firstItem="VNQ-nt-aih" firstAttribute="leading" secondItem="vy9-hb-dCl" secondAttribute="leading" constant="16" id="qjU-Dk-OEd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vy9-hb-dCl"/>
                     </view>
@@ -125,6 +135,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="xgu-Wt-hUa" id="Ngc-UA-L4P"/>
+                        <outlet property="segmentedControl" destination="Db6-qJ-JcG" id="4k7-NG-vEl"/>
                         <outlet property="titleTextField" destination="zaX-tm-sZs" id="0lP-QR-DvP"/>
                     </connections>
                 </viewController>
